# roboverse

./: .gitignore  README.md  roboverse_nodes.launch.xml  start.sh
ROS/roboverse/: roboverse.launch.py  start.sh
ROS/roboverse/dashboard/: docker-compose.yaml
ROS/roboverse/dashboard/www/: index.html
ROS/roboverse/dashboard/www/resources/: engine.js  stylesheet.css
ROS/roboverse/src/unicycle/: CMakeLists.txt  package.xml
ROS/roboverse/src/unicycle/config/: rv_places.yaml  target_places.yaml
ROS/roboverse/src/unicycle/include/unicycle/: KinematicsController.hpp  RendezvousManager.hpp  SensorsManager.hpp  TaskManager.hpp
ROS/roboverse/src/unicycle/src/: KinematicsController.cpp  RendezvousManager.cpp  TaskManager.cpp
ROS/roboverse/src/unicycle/srv/: UpdateKnowledge.srv
Unity/Assets/Materials/Robots/: RobotWheel.mat
Unity/Assets/Materials/YughuesFreeMetalMaterials/Materials/: M_YFMeM_01.mat  M_YFMeM_03.mat  M_YFMeM_04.mat  M_YFMeM_05.mat  M_YFMeM_07.mat  M_YFMeM_08.mat  M_YFMeM_10.mat  M_YFMeM_12.mat  M_YFMeM_13.mat  M_YFMeM_15.mat  M_YFMeM_16.mat  M_YFMeM_17.mat  M_YFMeM_18.mat  M_YFMeM_19.mat  M_YFMeM_20.mat  M_YFMeM_21.mat  M_YFMeM_22.mat  M_YFMeM_28.mat  M_YFMeM_29.mat  M_YFMeM_30.mat  M_YFMeM_31.mat  M_YFMeM_32.mat  M_YFMeM_37.mat  M_YFMeM_39.mat  M_YFMeM_43.mat  M_YFMeM_45.mat  M_YFMeM_47.mat  M_YFMeM_49.mat  M_YFMeM_53.mat  M_YFMeM_54.mat
Unity/Assets/Prefabs/City/HQ_Sculpture/Prefabs/: sculpture_0001.prefab
Unity/Assets/Prefabs/City/HQ_Sculpture/example_scene/: ReflectionProbe-0.exr
Unity/Assets/Prefabs/City/ModularLowpolyStreetsFree/Materials/Other/: Bench-1.mat  Cafe-table-1.mat  Hydrant.mat  Pole-light.mat  Sewer-hatch.mat  Tree-1.mat  Tree-area-1.mat
Unity/Assets/Prefabs/City/ModularLowpolyStreetsFree/Materials/Roads/: Border.mat  Crossroads-1-lines-circ.mat  Pavement.mat  Road-1-line-turn-2.mat
Unity/Assets/Prefabs/City/Simple city plain/Material & Texture/Colors_buildings/: B1.mat  B2.mat  C3.mat  D1.mat  D2.mat  E1.mat  E2.mat  F3.mat  G1.mat  G2.mat  H1.mat  H3.mat  I2.mat  J1.mat  K1.mat  K10.mat  K2.mat  K3.mat  K4.mat  K8.mat  K9.mat  k5.mat
Unity/Assets/Prefabs/City/Simple city plain/Material & Texture/Material mesh/: ColaMachine.mat  gas pump.mat  shop b.mat  street 3.mat
Unity/Assets/Prefabs/City/Simple city plain/Material & Texture/color_windows/: Windows light 1.mat  Windows light 2.mat
Unity/Assets/Prefabs/City/Simple city plain/Mesh/Materials/: Bench texture.mat  Brown.mat  Door_03.mat  Facade_01.mat  Fire_escape_03.mat  Fire_escape_04.mat  Material.mat  Metal_02.mat  Roof_01.mat  SideWalk.005.mat  (+12 more)
Unity/Assets/Prefabs/City/TDG Italian Ice/Materials/: Chocolate Ice.mat  IceUV1.mat  Lime Ice.mat  Metal - Red.mat  Strawberry Ice.mat  White.mat
Unity/Assets/Resources/: ROSConnectionPrefab.prefab
Unity/Assets/Scenes/: MainScene 1.unity
Unity/Assets/Scenes/MainScene/: LightingData.asset
Unity/Assets/Scripts/Robot/: SensorDataGenerator.cs
Unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity/Roboverse/Assets/Materials/Robots/: RobotHead.mat
Unity/Roboverse/Assets/Materials/YughuesFreeMetalMaterials/Materials/: M_YFMeM_02.mat  M_YFMeM_06.mat  M_YFMeM_09.mat  M_YFMeM_11.mat  M_YFMeM_14.mat  M_YFMeM_23.mat  M_YFMeM_24.mat  M_YFMeM_25.mat  M_YFMeM_26.mat  M_YFMeM_27.mat  M_YFMeM_33.mat  M_YFMeM_34.mat  M_YFMeM_35.mat  M_YFMeM_36.mat  M_YFMeM_38.mat  M_YFMeM_40.mat  M_YFMeM_41.mat  M_YFMeM_42.mat  M_YFMeM_44.mat  M_YFMeM_46.mat  M_YFMeM_48.mat  M_YFMeM_50.mat  M_YFMeM_51.mat  M_YFMeM_52.mat  M_YFMeM_55.mat
Unity/Roboverse/Assets/Prefabs/City/HQ_Sculpture/: example_scene.unity  install_RP_Versions.txt
Unity/Roboverse/Assets/Prefabs/Robot/: Unicycle prefab.prefab
Unity/Roboverse/Assets/Scenes/: MainScene.unity
Unity/Roboverse/Assets/Scripts/Environment/: AwakeEnvironment.cs  CameraController.cs  SimulationManager.cs
Unity/Roboverse/Assets/Scripts/Robot/: UnicycleController.cs  UnicycleDynamics.cs
Unity/Roboverse/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/Roboverse/ProjectSettings/: ProjectSettings.asset
dashboard/: default.conf
dashboard/www/: index.html
dashboard/www/resources/: engine.js  stylesheet.css
src/unicycle/: package.xml
src/unicycle/config/: target_places.yaml
src/unicycle/include/unicycle/: KinematicsController.hpp  KnowledgeRegister.hpp  RendezvousManager.hpp  SensorsManager.hpp  TaskManager.hpp
src/unicycle/src/: KinematicsController.cpp  KnowledgeRegister.cpp  RendezvousManager.cpp  SensorsManager.cpp  TaskManager.cpp
(+137 files in other folders)
